base/raspberry-pi-server/cowport/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: raspberry-pi-server-cowport
  namespace: ${RPI_SERVER_NAMESPACE:=raspberry-pi-server}
spec:
  selector:
    matchLabels:
      app: raspberry-pi-server-cowport
  replicas: 1
  template:
    metadata:
      labels:
        app: raspberry-pi-server-cowport
    spec:
      containers:
        - name: raspberry-pi-server
          image: ghcr.io/rustygreen/raspberry-pi-server:main
          imagePullPolicy: Always
          ports:
            - containerPort: &port 5000
          securityContext:
            privileged: true
      livenessProbe:
        httpGet:
          path: /healthz
          port: *port
        initialDelaySeconds: 5
        periodSeconds: 60
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: site
                    operator: In
                    values:
                      - cowport
      tolerations:
        - key: site
          operator: Equal
          value: cowport
          effect: NoSchedule
